# cunca

./: .dockerignore  .flake8  .gitignore  BACKLOG.md  CLAUDE.md  Dockerfile  GITHUB_ISSUES.md  LICENSE  Makefile  README.md  TODOs.md  TODOs_PRIORITIZED.md  __init__.py  base.py  commit_issues_001_002.sh  conftest.py  docker-compose.yml  main.py  meta_la.py  mkdocs.yml  neurogenesis.py  pyproject.toml  requirements-dev.txt  requirements-gpu.txt  requirements-mvp.txt  requirements-tpu.txt  self_attention.py  stack.py
COCOMO_II/: COCOMO_II_REPORT_2025.md  cocomo_ii.py
agents/: README.md  README_FACTORY_STRATEGY.md  TODOs.md  __init__.py  advanced_behaviors.py  behaviors.py  capibara_agent.py  capibara_agent_factory.py  capibara_auto_agent.py  capibara_prompt_to_spec.py  communication_behaviors.py  demo_ultra_agents_interfaces.py  e2b_sandbox_agent.py  examples.py  factories.py  orchestration_strategies.py  tool_library.py  ultra_agent_orchestrator.py
app/: __init__.py  auth.py  main.py  ratelimit.py  routes.py
benchmarks/: __init__.py  __main__.py  cli.py  comparator.py  reporter.py  runner.py
capibara/: README.md  __init__.py  cli.py  mvp_api.py
config/: README.md  __init__.py  config.yaml  config_loader.py  config_manager.py  config_schema.py  config_semiotic.py  config_settings.py  config_validator.py  config_validators.py  convexity_config.py  cot_config.py  memory_config.py  model_config.py  slim.yaml  slim_loader.py  training_config.py  unified_model_config.py
core/: README.md  TODOs.md  __init__.py  arm_optimizations.py  config.py  cot.py  cot_27_nuclei_complete.py  cot_utils.py  dataset_registry.py  decorators.py  executor.py  hf_model.py  import_utils.py  inference.py  memory_monitors.py  meta_loop.py  metrics.py  model.py  modular_model.py  module_registry.py  nested_meta_loop.py  optimization.py  optimizers.py  router.py  routing.py  self_modifying_router.py  slim_router.py  tokenizer.py  tpu_v6_vq_integration.py  ultra_core_integration.py
cunca/: __init__.py  architecture.py  config.py  qlora.py
data/: README.md  TODOs.md  __init__.py  cunca_corpus.py  dataset_registry.py  datasets_registry.yaml  download.py  loader.py  mixer.py  preprocess.py  ultra_data_orchestrator.py
docker/: Dockerfile  README.md  docker-compose.slim.yml
docs/: Makefile  README.md  TODOs.md  conf.py  index.md  index.rst  requirements.txt
inference/: README.md  TODOs.md  __init__.py  arm_optimized_inference.py  hybrid_inference_engine.py  lmtp_decoder.py  pipeline.py  quantization.py  streaming.py
interfaces/: README.md  TODOs.md  __init__.py  icache.py  imodules.py  isub_models.py  isubmodel.py  ultra_interface_system.py
jax/: README.md  TODOs.md  __init__.py  activations.py  capibara_random.py  compat.py  core.py  dtypes.py  jax_typing.py  sharding.py  tree_util.py  version.py  xla.py
layers/: README.md  TODOs.md  __init__.py  attention_utils.py  base.py  conv1d_block.py  embedding.py  jax_compat.py  meta_la.py  neuro_adaptive.py  neurogenesis.py  self_attention.py  smb_layer.py  ssm_hybrid_layers.py  stack.py  ultra_layer_integration.py
mcp/: README.md  __init__.py  model_router.py  resource_manager.py  version_manager.py
models/: README.md  TODOs.md  architecture.py  backend.py  lmtp.py  mamba_backend.py  pretrained_backbone.py  registry.py  stub_backend.py  transformer_backend.py
modules/: README.md  TODOs.md  __init__.py  analysis_modules_and_jax_decorators.md  capibara_adaptive_router.py  hierarchical_reasoning.py  shared_attention.py  specialized_processors.py  ultra_module_orchestrator.py  ultra_modules_demo.py
pipeline/: README.md  TODOs.md  __init__.py  run_pipeline.py
prompts/: README.md  TODOs.md  __init__.py  prompt_template.py  response_formatter.py
rag/: __init__.py  ingestion.py  retriever.py  store.py
reports/: README.md  TODOs.md  jsonld_toon_assessment.md
safety/: README.md  TODOs.md  __init__.py  content_filter.py  input_filter.py  intervention_system.py  mental_health_monitor.py  output_filter.py
scripts/: README.md  TODOs.md  cascade_inference.py  check_docs.py  clean_todos.py  create_all_todo_issues.py  create_todo_issues.sh  download_dog.py  generate_gestoria_data.py  run_tests.py  serve.py  smoke_mvp_api.sh  smoke_mvp_api_happy.sh  train_lmtp_cpu.py  train_real_cpu.py  train_synthetic.py  validate_imports.py  validate_project.py
services/: README.md  TODOs.md  __init__.py  api_service.py  mcp_integration.py  model_service.py  tts.py
sub_models/: Byte_TPU.py  README.md  SSM_TPU.py  TODOs.md  __init__.py  aleph_Tilde.py  csa_expert.py  csa_expert_tpu_optimized.py  deep_dialog.py  reasoning_enhancement.py  ultra_enhanced_integration.py  ultra_submodel_orchestrator.py
tests/: README.md  TODOs.md  __init__.py  conftest.py
tools/: __init__.py  detector.py  executor.py  registry.py
training/: README.md  TODOs.md  __init__.py  advanced_consensus_algorithms.py  bias_safety_filter.py  btx_training_system.py  byte_level_training.py  cascade_training_integration.py  checkpoint.py  config_manager.py  consensus_memory_manager.py  core_training_bridge.py  data_preprocessing_integration.py  distributed.py  distributed_consensus_cache.py  enhanced_hf_consensus_strategy.py  evaluation.py  expanded_expert_cores_strategy.py  hierarchical_training_strategy.py  huggingface_consensus_config.py  huggingface_consensus_strategy.py  hybrid_expert_router.py  integrated_consensus_strategy.py  jax_utils.py  legal_compliance_config.py  lmtp_trainer.py  meta_consensus_comp_benchmark.py  meta_consensus_comp_integration.py  meta_consensus_system.py  moe_hierarchical_router.py  monitoring_dashboard.py  multimodal_minimal_training.py  optimized_meta_consensus.py  tpu_v6_consensus_optimizer.py  tpu_v6e_trainer.py  train.py  trainer.py  unified_consensus.py  unified_trainer.py
ui/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
utils/: README.md  TODOs.md  __init__.py  arm_compatibility_validator.py  cache.py  cache_standalone.py  checkpoint_manager.py  config_utils.py  data_processing.py  data_utils.py  error_handling.py  logger.py  (+17 more)
(+564 files in other folders)
