[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "capibaragpt"
dynamic = ["version"]
description = "CapibaraGPT - Advanced Modular AI System with TPU/GPU Support"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "CapibaraGPT Team", email = "team@capibaragpt.io"}
]
keywords = [
    "ai", "deep-learning", "transformer", "mamba", "tpu", "gpu",
    "mixture-of-experts", "neural-network", "nlp", "multimodal"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies (backend-agnostic)
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "einops>=0.7.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "toml>=0.10.2",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "httpx>=0.24.0",
    "aiofiles>=23.0.0",
    "tensorboardX>=2.6",
    "wandb>=0.15.0",
    "datasets>=2.14.0",
    "tokenizers>=0.15.0",
    "sentencepiece>=0.1.99",
    "transformers>=4.35.0",
]

[project.optional-dependencies]
# TPU backend (JAX-based)
tpu = [
    "jax[tpu]>=0.4.20",
    "flax>=0.8.0",
    "optax>=0.1.7",
    "orbax-checkpoint>=0.4.0",
    "clu>=0.0.9",
]

# GPU backend (PyTorch/CUDA for A-100)
gpu = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "torchaudio>=2.1.0",
    "flash-attn>=2.4.0",
    "xformers>=0.0.23",
    "bitsandbytes>=0.41.0",
    "deepspeed>=0.12.0",
    "accelerate>=0.25.0",
    "peft>=0.7.0",
]

# Mamba/SSM support
mamba = [
    "mamba-ssm>=1.2.0",
    "causal-conv1d>=1.1.0",
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.82.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "pre-commit>=3.4.0",
]

# Documentation
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
    "autodoc-pydantic>=2.0.0",
]

# All dependencies
all = [
    "capibaragpt[tpu,gpu,mamba,dev,docs]",
]

[project.scripts]
capibara = "capibara.cli:main"
capibara-train = "capibara.training.cli:main"
capibara-inference = "capibara.inference.cli:main"

[project.urls]
Homepage = "https://github.com/anachroni-co/capibaraGPT_v3"
Documentation = "https://capibaragpt.readthedocs.io"
Repository = "https://github.com/anachroni-co/capibaraGPT_v3"
Issues = "https://github.com/anachroni-co/capibaraGPT_v3/issues"

[tool.setuptools]
packages = ["capibara"]
package-dir = {"" = "."}

[tool.setuptools_scm]
write_to = "_version.py"
version_scheme = "python-simplified-semver"
local_scheme = "dirty-tag"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "-ra",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: performance benchmarks (requires pytest-benchmark)",
    "tpu: marks tests that require TPU",
    "gpu: marks tests that require GPU",
    "integration: marks integration tests",
    "unit: marks unit tests",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "docs/",
    "scripts/",
]

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C4",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.isort]
known-first-party = ["capibara"]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.coverage.run]
source = ["capibara"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
