[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cunca"
dynamic = ["version"]
description = "CUNCA-Hybrid — Galician-focused Mamba-Transformer LLM with GQA, sliding-window attention and QLoRA fine-tuning"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "Anacroni S.Coop.Gal.", email = "info@anachroni.co"}
]
keywords = [
    "ai", "deep-learning", "transformer", "mamba", "gqa", "sliding-window",
    "qlora", "galician", "low-resource-nlp", "jax", "flax", "pytorch",
    "mixture-of-experts", "think-anywhere", "grpo"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Natural Language :: Galician",
]

# Minimal core — backend-agnostic
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "einops>=0.7.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "toml>=0.10.2",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "httpx>=0.24.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
# TPU v5 training (JAX/Flax — primary backend)
tpu = [
    "jax[tpu]>=0.4.20",
    "flax>=0.8.0",
    "optax>=0.1.7",
    "orbax-checkpoint>=0.4.0",
]

# GPU training + QLoRA (PyTorch)
gpu = [
    "torch>=2.1.0",
    "flash-attn>=2.4.0",
    "accelerate>=0.25.0",
    "peft>=0.7.0",
    "bitsandbytes>=0.41.0",
]

# GGUF export + llama.cpp inference (CPU dev)
gguf = [
    "gguf>=0.6.0",
    "llama-cpp-python>=0.2.0",
]

# API server
api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

# Development + testing
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "pre-commit>=3.4.0",
    "gguf>=0.6.0",
]

# All extras
all = [
    "cunca[tpu,gpu,gguf,api,dev]",
]

[project.urls]
Homepage = "https://github.com/anachroni-co/cunca"
Repository = "https://github.com/anachroni-co/cunca"
Issues    = "https://github.com/anachroni-co/cunca/issues"

[tool.setuptools.packages.find]
include = [
    "cunca*", "capibara*", "core*", "config*", "utils*",
    "training*", "inference*", "models*", "evaluation*",
    "scripts*", "data*", "pipeline*", "services*",
    "layers*", "interfaces*", "modules*", "safety*",
    "serving*", "mcp*", "prompts*", "rag*",
]
exclude = ["tests*", "docs*", "benchmarks*"]

[tool.setuptools_scm]
write_to = "_version.py"
version_scheme = "python-simplified-semver"
local_scheme = "dirty-tag"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "-ra", "--strict-markers"]
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
    "ignore:Type google\\._upb\\._message.*:DeprecationWarning",
]
markers = [
    "slow: marks tests as slow",
    "tpu: marks tests that require TPU",
    "gpu: marks tests that require GPU",
    "integration: marks integration tests",
    "unit: marks unit tests",
    "cunca: marks CUNCA-specific tests",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/", "docs/", "scripts/"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "W", "F", "I", "C4", "B", "UP"]
ignore = ["E501", "B008", "C901"]

[tool.ruff.isort]
known-first-party = ["cunca", "capibara", "core", "training", "inference", "models"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.coverage.run]
source = ["cunca", "capibara", "core", "training", "inference", "models", "evaluation"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*", "*/demo_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
